# llama_c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  old_CMakeLists.txt
src/: CMakeLists.txt
src/kernels/: CMakeLists.txt  build_causal_mask.cu  build_causal_mask.h  cublas_utils.cu  cublas_utils.h  input_embedding.cu  input_embedding.h  linear.cu  linear.h  paddingoffset.cu  paddingoffset.h  rmsnorm.cu  rmsnorm.h
src/utils/: CMakeLists.txt  tensor.h  vectorize_utils.h
src/weights/: CMakeLists.txt  base_weights.h
src/weights/llama_weight/: embedding_weights.h  norm_weights.h
tests/: CMakeLists.txt
tests/casualmasktest/: CMakeLists.txt  casual_mask_test.cu
tests/embeddingtest/: CMakeLists.txt  embedding_input_test.cu
tests/lineartest/: CMakeLists.txt  linear_test.cu
tests/paddingoffsettest/: CMakeLists.txt  padding_offset_test.cu
tests/rmsnormtest/: CMakeLists.txt  rmsnorm_test.cu
utils/: tensor.h
